# bulletinMonotorScraper

./: .gitignore  Dockerfile  README.md  bulletin.db  pyproject.toml  requirements.txt
app/: bulletin_scraper.py  bulletin_search.py  main.py
