[tool.poetry]
name = "bulletinmonitorscraper"
version = "0.1.0"
description = ""
authors = ["zolizoli <zoltan.varju@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30.0"
pdfplumber = "^0.9.0"
bs4 = "^0.0.1"
fastapi = "^0.95.2"
fastapi-utils = "^0.2.1"
fastapi-health = "^0.4.0"
uvicorn = "^0.22.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
